Add reset button

--- a/index.html
+++ b/index.html
@@ -101,13 +101,11 @@ float:left;
   float: right;
 }
 #search-btn-panel{
+  margin-top:20px;
   text-align:center;
 }
-#btn-search{
-  margin-top: 10px;
-}
 
-#accordion{
+#search-panel{
   margin-top: 20px;
   width:300px; 
   height:auto;
@@ -129,6 +127,7 @@ float:left;
 
 <div id="canvas-svg"></div>
 
+<div id="search-panel">
  <div id="accordion">
   <h3>Basic</h3>
   <div>
@@ -211,6 +210,8 @@ float:left;
  </div>
 <div id="search-btn-panel">
  <button id="btn-search" class="ui-button ui-corner-all ui-widget">Search</button>
+ <button id="btn-reset" class="ui-button ui-corner-all ui-widget">Reset</button>
+</div>
 </div>
 
 <div id="bar-chart"></div>
