--- a/ccq/first.html
+++ b/ccq/first.html
@@ -49,7 +49,7 @@
 					break;
 				}
 			}
-			window.location.href="index.html?country=" + value1;
+			window.location.href="second.html?country=" + value1;
 	    }
     </script>
 </body>
